<resources>
    <string name="app_name">Rutas Creativas CUValles</string>
    <string name="action_settings">Settings</string>
    <string name="ruta">Ruta</string>
    <string name="sitios">Sitios de interes</string>
    <string name="Comidas">Comidas</string>
    <string name="Reparacion">Reparación</string>
    <string name="wc">Wc</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="galeria">Ir a web</string>
    <string name="otras">Otras opciones</string>
    <string name="usuario">Usuario</string>
    <string name="title_activity_maps55">Map</string>
</resources>
